Swagger 보안설정 까지

--- a/cat-community/.env
+++ b/cat-community/.env
@@ -2,3 +2,8 @@ SERVER_PORT=3005
 DB_HOST='mongodb+srv://admin:mAYbxxG3Y0AxGIYC@cluster0.2pechni.mongodb.net/cats?retryWrites=true&w=majority'
 
 MODE='dev'
+
+JWT_SECRET='114jh14j216awudgy21j'
+
+SWAGGER_USER=hhs
+SWAGGER_PASSWORD=0120
