--- a/cat-community/package.json
+++ b/cat-community/package.json
@@ -28,6 +28,8 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.1.4",
+    "bcrypt": "^5.1.0",
     "express-basic-auth": "^1.2.1",
     "mongoose": "^6.8.1",
     "passport": "^0.6.0",
@@ -40,8 +42,10 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
